[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qmuvi"
version = "0.1.0"
description = "A small example package"
readme = "README.md"
authors = [
  { name="Gary Mooney", email="mooneyg@unimelb.edu.au" },
  { name="Harish Vallury", email="hvallury@student.unimelb.edu.au" },
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "qiskit",
    "mido",
    "pymovie",
    "matplotlib",
    "pylatexenc",
]

[project.urls]
"Homepage" = "https://github.com/garymooney/qmuvi"
"Bug Tracker" = "https://github.com/garymooney/qmuvi/issues"

[project.optional-dependencies]
test = [
  "pytest"
]