[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qmuvi"
version = "0.1.0"
description = "A quantum music video generation tool"
readme = "README.md"
authors = [
  { name="Gary Mooney", email="mooneyg@unimelb.edu.au" },
  { name="Harish Vallury", email="hvallury@student.unimelb.edu.au" },
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Operating System :: OS Independent",
]
dependencies = [
    "qiskit",
    "mido",
    "pymovie",
    "matplotlib",
    "pylatexenc",
]

[project.optional-dependencies]
dev = [
  "pytest"
]

[project.urls]
"Homepage" = "https://github.com/garymooney/qmuvi"
"Bug Tracker" = "https://github.com/garymooney/qmuvi/issues"